<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/taskmanager_background">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="@dimen/signUpScreen_padding">

            <!--<LinearLayout
                android:id="@+id/login_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_gravity="center|bottom"
                android:orientation="vertical"
                android:padding="@dimen/loginScreen_padding">-->

            <EditText
                android:id="@+id/id_comapnyId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/signUpScreen_EditText_marginTop"
                android:background="@drawable/rounded_edittext1"
                android:drawableLeft="@drawable/company24"
                android:drawablePadding="8dp"
                android:gravity="center_vertical"
                android:hint="@string/company_id"
                android:inputType="text"
                android:padding="@dimen/loginScreen_EditText_padding"
                android:singleLine="true"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="@dimen/signUpScreen_EditText_textSize" />


            <!--  <View
                  android:layout_width="fill_parent"
                  android:layout_height="2px"
                  android:background="@color/white_greyish" />-->


            <EditText
                android:id="@+id/id_companyName"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginTop="@dimen/signUpScreen_EditText_marginTop"
                android:background="@drawable/rounded_edittext1"
                android:drawableLeft="@drawable/company24"
                android:drawablePadding="8dp"
                android:gravity="center_vertical"
                android:hint="@string/company_name"
                android:inputType="textEmailAddress"
                android:padding="@dimen/loginScreen_EditText_padding"
                android:singleLine="true"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="@dimen/signUpScreen_EditText_textSize" />

            <!--<View
                android:layout_width="fill_parent"
                android:layout_height="2px"
                android:background="@color/white_greyish" />
-->
            <EditText
                android:id="@+id/id_phonenumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/signUpScreen_EditText_marginTop"
                android:background="@drawable/rounded_edittext1"
                android:drawableLeft="@drawable/call24"
                android:drawablePadding="8dp"
                android:gravity="center_vertical"
                android:hint="@string/mobileNumber"
                android:inputType="numberDecimal"
                android:maxLength="10"
                android:padding="@dimen/loginScreen_EditText_padding"
                android:singleLine="true"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="@dimen/signUpScreen_EditText_textSize" />



            <EditText
                android:id="@+id/id_emailid"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/signUpScreen_EditText_marginTop"
                android:background="@drawable/rounded_edittext1"
                android:drawableLeft="@drawable/email24"
                android:drawablePadding="8dp"
                android:gravity="center_vertical"
                android:hint="@string/email1"
                android:inputType="textEmailAddress"
                android:padding="@dimen/loginScreen_EditText_padding"
                android:singleLine="true"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="@dimen/signUpScreen_EditText_textSize" />


            <EditText
                android:id="@+id/id_cityname"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/signUpScreen_EditText_marginTop"
                android:background="@drawable/rounded_edittext1"
                android:drawableLeft="@drawable/building24"
                android:drawablePadding="8dp"
                android:gravity="center_vertical"
                android:hint="@string/city"
                android:inputType="text"
                android:padding="@dimen/loginScreen_EditText_padding"
                android:singleLine="true"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="@dimen/signUpScreen_EditText_textSize" />


            <CheckBox
                android:id="@+id/terms_conditions"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/signUpScreen_EditText_marginTop"
                android:buttonTint="@color/white"
                android:text="@string/terms_conditions"
                android:textColor="@color/white"
                android:textSize="@dimen/signUpScreen_CheckBox_textSize" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:orientation="horizontal"
                android:padding="10dp">

                <Button
                    android:id="@+id/id_register"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:background="@drawable/rounded_edittext1"
                    android:padding="3dp"
                    android:text="@string/register"
                    android:textColor="#fff"
                    android:textSize="@dimen/loginScreen_EditText_textSize"
                    android:textStyle="normal" />

                <Button
                    android:id="@+id/alreadyuser"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginLeft="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/rounded_edittext1"
                    android:gravity="center"
                    android:padding="10dp"
                    android:text="@string/already_user"
                    android:textColor="@color/white_greyish"
                    android:textSize="@dimen/loginScreen_EditText_textSize" />
            </LinearLayout>
            <!--</LinearLayout>-->

        </LinearLayout>
    </ScrollView>

    <TextView
        android:layout_width="@dimen/loginScreen_ImageView_width"
        android:layout_height="@dimen/loginScreen_ImageView_height"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_gravity="right|bottom"
        android:layout_marginBottom="0dp"
        android:gravity="center"
        android:text="Demo"
        android:visibility="gone"
        android:textColor="#fff" />

    <ImageView
        android:layout_width="@dimen/loginScreen_ImageView_width"
        android:layout_height="@dimen/loginScreen_ImageView_height"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_gravity="right|bottom"
        android:layout_marginBottom="0dp"
        android:src="@drawable/myaccountslogo" />

</RelativeLayout>