<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/taskmanager_background"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:padding="@dimen/signUpScreen_padding"
            android:orientation="vertical">
            <!--  <android.support.v7.widget.CardView
                  android:layout_width="match_parent"
                  android:layout_height="match_parent"
                  android:layout_gravity="center"
                  android:layout_margin="4dp"
                  android:elevation="5dp"
                  card_view:cardCornerRadius="8dp"
                  card_view:contentPadding="5dp">-->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="10dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:padding="10dp"
                    android:text="@string/enter_confirmation"
                    android:textColor="#fff" />

                <TextView
                    android:id="@+id/id_otpmobilenumber"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:padding="10dp"
                    android:background="@drawable/rounded_edittext1"
                    android:text="123456"
                    android:textColor="#fff"
                    android:textSize="20dp" />
                <!--  <ImageButton
                      android:id="@+id/id_phoneOTPButton"
                      android:layout_width="0dp"
                      android:layout_height="wrap_content"
                      android:layout_weight=".7"
                      android:background="#fff"
                      android:src="@drawable/checked24" />-->
            </LinearLayout>
            <!--  </android.support.v7.widget.CardView>-->


            <!--   <android.support.v7.widget.CardView
                   android:layout_width="match_parent"
                   android:layout_height="match_parent"
                   android:layout_gravity="center"
                   android:layout_margin="4dp"
                   android:elevation="5dp"
                   card_view:cardCornerRadius="8dp"
                   card_view:contentPadding="5dp">-->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="10dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:padding="10dp"
                    android:text="@string/msg_sit_back"
                    android:textColor="#fff" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:padding="10dp"
                    android:text="@string/msg_manual_otp"
                    android:textColor="#fff" />

                <EditText
                    android:id="@+id/otp_editext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:background="@drawable/rounded_edittext1"
                    android:gravity="center"
                    android:textColorHint="#fff"
                    android:hint="@string/lbl_enter_otp"
                    android:textColor="#fff"
                    android:inputType="number"
                    android:padding="10dp" />

                <Button
                    android:id="@+id/otp_Button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/rounded_edittext1"
                    android:enabled="true"
                    android:textColor="#fff"
                    android:padding="10dp"
                    android:text="Submit" />

            </LinearLayout>
            <!--  </android.support.v7.widget.CardView>-->

        </LinearLayout>
    </ScrollView>

    <TextView
        android:layout_width="@dimen/loginScreen_ImageView_width"
        android:layout_height="@dimen/loginScreen_ImageView_height"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_gravity="right|bottom"
        android:layout_marginBottom="0dp"
        android:gravity="center"
        android:text="Demo"
        android:visibility="gone"
        android:textColor="#fff" />

    <ImageView
        android:layout_width="@dimen/loginScreen_ImageView_width"
        android:layout_height="@dimen/loginScreen_ImageView_height"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_gravity="right|bottom"
        android:layout_marginBottom="0dp"
        android:src="@drawable/myaccountslogo" />

</RelativeLayout>